tests/fail/open__builtin__--AttributeError.py
"""'open' should not exist in __builtin__."""
import __builtin__
__builtin__.open
